@@ -2,6 +2,7 @@ package com.youlai.system.service.impl;
 
 import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.lang.Assert;
+import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
@@ -39,15 +40,15 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> implements SysRoleService {
 
-    private final SysRoleMenuService sysRoleMenuService;
-    private final SysUserRoleService sysUserRoleService;
+    private final SysRoleMenuService roleMenuService;
+    private final SysUserRoleService userRoleService;
     private final RoleConverter roleConverter;
 
     /**
      * 角色分页列表
      *
-     * @param queryParams
-     * @return
+     * @param queryParams 角色查询参数
+     * @return {@link Page<RolePageVO>} – 角色分页列表
      */
     @Override
     public Page<RolePageVO> getRolePage(RolePageQuery queryParams) {
@@ -76,7 +77,7 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
     /**
      * 角色下拉列表
      *
-     * @return
+     * @return {@link List<Option>} – 角色下拉列表
      */
     @Override
     public List<Option> listRoleOptions() {
@@ -94,26 +95,44 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
     /**
      * 保存角色
      *
-     * @param roleForm
-     * @return
+     * @param roleForm 角色表单数据
+     * @return {@link Boolean}
      */
     @Override
     public boolean saveRole(RoleForm roleForm) {
 
         Long roleId = roleForm.getId();
-        String roleCode = roleForm.getCode();
 
+        // 编辑角色时，判断角色是否存在
+        SysRole oldRole = null;
+        if (roleId != null) {
+            oldRole = this.getById(roleId);
+            Assert.isTrue(oldRole != null, "角色不存在");
+        }
+
+        String roleCode = roleForm.getCode();
         long count = this.count(new LambdaQueryWrapper<SysRole>()
                 .ne(roleId != null, SysRole::getId, roleId)
                 .and(wrapper ->
-                        wrapper.eq(SysRole::getCode, roleCode).or().eq(SysRole::getName, roleCode)
+                        wrapper.eq(SysRole::getCode, roleCode).or().eq(SysRole::getName, roleForm.getName())
                 ));
-        Assert.isTrue(count == 0, "角色名称或角色编码重复，请检查！");
+        Assert.isTrue(count == 0, "角色名称或角色编码已存在，请修改后重试！");
 
         // 实体转换
         SysRole role = roleConverter.form2Entity(roleForm);
 
-        return this.saveOrUpdate(role);
+        boolean result = this.saveOrUpdate(role);
+        if (result) {
+            // 判断角色编码或状态是否修改，修改了则刷新权限缓存
+            if (oldRole != null
+                    && (
+                    !StrUtil.equals(oldRole.getCode(), roleCode) ||
+                            !ObjectUtil.equals(oldRole.getStatus(), roleForm.getStatus())
+            )) {
+                roleMenuService.refreshRolePermsCache(oldRole.getCode(), roleCode);
+            }
+        }
+        return result;
     }
 
     /**
@@ -125,8 +144,7 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
     @Override
     public RoleForm getRoleForm(Long roleId) {
         SysRole entity = this.getById(roleId);
-        RoleForm roleForm = roleConverter.entity2Form(entity);
-        return roleForm;
+        return roleConverter.entity2Form(entity);
     }
 
     /**
@@ -138,9 +156,16 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
      */
     @Override
     public boolean updateRoleStatus(Long roleId, Integer status) {
-        boolean result = this.update(new LambdaUpdateWrapper<SysRole>()
-                .eq(SysRole::getId, roleId)
-                .set(SysRole::getStatus, status));
+        SysRole role = this.getById(roleId);
+        Assert.isTrue(role != null, "角色不存在");
+
+        role.setStatus(status);
+        boolean result = this.updateById(role);
+        if (result) {
+            // 刷新角色的权限缓存
+            roleMenuService.refreshRolePermsCache(role.getCode());
+        }
+
         return result;
     }
 
@@ -152,17 +177,25 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
      */
     @Override
     public boolean deleteRoles(String ids) {
-        List<Long> roleIds = Arrays.asList(ids.split(",")).stream().map(id -> Long.parseLong(id)).collect(Collectors.toList());
-        Optional.ofNullable(roleIds)
-                .orElse(new ArrayList<>())
-                .forEach(id -> {
-                    long count = sysUserRoleService.count(new LambdaQueryWrapper<SysUserRole>().eq(SysUserRole::getRoleId, id));
-                    Assert.isTrue(count <= 0, "该角色已分配用户，无法删除");
-                    sysRoleMenuService.remove(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleId, id));
-                });
+        List<Long> roleIds = Arrays.stream(ids.split(","))
+                .map(Long::parseLong)
+                .toList();
 
+        for (Long roleId : roleIds) {
+            SysRole role = this.getById(roleId);
+            Assert.isTrue(role != null, "角色不存在");
 
-        return this.removeByIds(roleIds);
+            // 判断角色是否被用户关联
+            boolean isRoleAssigned = userRoleService.hasAssignedUsers(roleId);
+            Assert.isTrue(!isRoleAssigned, "角色【{}】已分配用户，请先解除关联后删除", role.getName());
+
+            boolean deleteResult = this.removeById(roleId);
+            if (deleteResult) {
+                // 删除成功，刷新权限缓存
+                roleMenuService.refreshRolePermsCache(role.getCode());
+            }
+        }
+        return true;
     }
 
     /**
@@ -173,29 +206,36 @@ public class SysRoleServiceImpl extends ServiceImpl<SysRoleMapper, SysRole> impl
      */
     @Override
     public List<Long> getRoleMenuIds(Long roleId) {
-        return sysRoleMenuService.listMenuIdsByRoleId(roleId);
+        return roleMenuService.listMenuIdsByRoleId(roleId);
     }
 
     /**
-     * 修改角色的资源权限
+     * 分配角色资源权限
      *
-     * @param roleId
-     * @param menuIds
-     * @return
+     * @param roleId  角色ID
+     * @param menuIds 菜单ID集合
+     * @return {@link Boolean}
      */
     @Override
     @Transactional
-    @CacheEvict(cacheNames = "system", key = "'routes'")
-    public boolean updateRoleMenus(Long roleId, List<Long> menuIds) {
+    @CacheEvict(cacheNames = "menu", key = "'routes'")
+    public boolean assignMenusToRole(Long roleId, List<Long> menuIds) {
+        SysRole role = this.getById(roleId);
+        Assert.isTrue(role != null, "角色不存在");
+
         // 删除角色菜单
-        sysRoleMenuService.remove(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleId, roleId));
+        roleMenuService.remove(new LambdaQueryWrapper<SysRoleMenu>().eq(SysRoleMenu::getRoleId, roleId));
         // 新增角色菜单
         if (CollectionUtil.isNotEmpty(menuIds)) {
             List<SysRoleMenu> roleMenus = menuIds.stream()
                     .map(menuId -> new SysRoleMenu(roleId, menuId))
                     .collect(Collectors.toList());
-            sysRoleMenuService.saveBatch(roleMenus);
+            roleMenuService.saveBatch(roleMenus);
         }
+
+        // 刷新角色的权限缓存
+        roleMenuService.refreshRolePermsCache(role.getCode());
+
         return true;
     }
 
